// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders correctly with address but without contact 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
      "justifyContent": "center",
      "marginBottom": 10,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        },
        Object {
          "alignSelf": "center",
          "margin": "auto",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Object {
            "backgroundColor": "#7AD6FE",
            "borderRadius": 20,
            "height": 40,
            "width": 40,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "Hind-Medium",
              "fontSize": 16,
            },
            Object {
              "fontSize": 20,
            },
          ]
        }
      >
        M
      </Text>
    </View>
  </View>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "color": "#2E3338",
          "fontFamily": "Hind-SemiBold",
          "fontSize": 14,
          "lineHeight": 18,
        },
        Object {
          "marginHorizontal": 20,
          "paddingTop": 6,
          "textAlign": "center",
        },
      ]
    }
  >
    mockName
  </Text>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "color": "#2E3338",
          "fontFamily": "Hind-Regular",
          "fontSize": 14,
          "lineHeight": 18,
        },
        Object {
          "fontFamily": "Hind-Light",
        },
        Object {
          "marginHorizontal": 20,
          "paddingTop": 6,
          "textAlign": "center",
        },
      ]
    }
  >
    #000000000000000...
  </Text>
</View>
`;

exports[`Avatar renders correctly with contact 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
      "justifyContent": "center",
      "marginBottom": 10,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        },
        Object {
          "alignSelf": "center",
          "margin": "auto",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Object {
            "backgroundColor": "#7AD6FE",
            "borderRadius": 20,
            "height": 40,
            "width": 40,
          },
        ]
      }
    >
      <Image
        resizeMode="cover"
        source={
          Object {
            "uri": "mockThumbpath",
          }
        }
        style={
          Array [
            Object {
              "marginLeft": "auto",
              "marginRight": "auto",
            },
            Object {
              "borderRadius": 20,
              "height": 40,
              "width": 40,
            },
          ]
        }
      />
    </View>
  </View>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "color": "#2E3338",
          "fontFamily": "Hind-SemiBold",
          "fontSize": 14,
          "lineHeight": 18,
        },
        Object {
          "marginHorizontal": 20,
          "paddingTop": 6,
          "textAlign": "center",
        },
      ]
    }
  >
    mockName
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#2E3338",
            "fontFamily": "Hind-Light",
            "fontSize": 14,
            "textAlignVertical": "center",
          },
          Object {
            "alignItems": "center",
            "backgroundColor": "#EEEEEE",
            "borderRadius": 3,
            "justifyContent": "center",
            "marginRight": 5,
            "paddingLeft": 6,
            "paddingRight": 3,
          },
        ]
      }
    >
      🇺🇸 +1
    </Text>
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Hind-Light",
          "fontSize": 14,
          "textAlignVertical": "center",
        }
      }
    >
      (415) 555-6666
    </Text>
  </View>
</View>
`;

exports[`Avatar renders correctly with number but without contact 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
      "justifyContent": "center",
      "marginBottom": 10,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        },
        Object {
          "alignSelf": "center",
          "margin": "auto",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Object {
            "backgroundColor": "#7AD6FE",
            "borderRadius": 20,
            "height": 40,
            "width": 40,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "Hind-Medium",
              "fontSize": 16,
            },
            Object {
              "fontSize": 20,
            },
          ]
        }
      >
        M
      </Text>
    </View>
  </View>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "color": "#2E3338",
          "fontFamily": "Hind-SemiBold",
          "fontSize": 14,
          "lineHeight": 18,
        },
        Object {
          "marginHorizontal": 20,
          "paddingTop": 6,
          "textAlign": "center",
        },
      ]
    }
  >
    mockName
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#2E3338",
            "fontFamily": "Hind-Light",
            "fontSize": 14,
            "textAlignVertical": "center",
          },
          Object {
            "alignItems": "center",
            "backgroundColor": "#EEEEEE",
            "borderRadius": 3,
            "justifyContent": "center",
            "marginRight": 5,
            "paddingLeft": 6,
            "paddingRight": 3,
          },
        ]
      }
    >
      🇺🇸 +1
    </Text>
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Hind-Light",
          "fontSize": 14,
          "textAlignVertical": "center",
        }
      }
    >
      (415) 555-6666
    </Text>
  </View>
</View>
`;

exports[`Avatar renders correctly without contact and number 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
      "justifyContent": "center",
      "marginBottom": 10,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        },
        Object {
          "alignSelf": "center",
          "margin": "auto",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Object {
            "backgroundColor": "#7AD6FE",
            "borderRadius": 20,
            "height": 40,
            "width": 40,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "Hind-Medium",
              "fontSize": 16,
            },
            Object {
              "fontSize": 20,
            },
          ]
        }
      >
        M
      </Text>
    </View>
  </View>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "color": "#2E3338",
          "fontFamily": "Hind-SemiBold",
          "fontSize": 14,
          "lineHeight": 18,
        },
        Object {
          "marginHorizontal": 20,
          "paddingTop": 6,
          "textAlign": "center",
        },
      ]
    }
  >
    mockName
  </Text>
</View>
`;
